--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Walentynki 💖</title>
+  <title>Walentyki 💖</title>
 
   <style>
     body {
@@ -15,6 +15,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      overflow: hidden; /* żeby serca nie robiły scrolla */
     }
 
     .container {
@@ -29,15 +30,20 @@
 
     .buttons {
       position: relative;
-      height: 200px;
+      height: 220px;
+      max-width: 420px;
+      margin: 0 auto;
     }
 
     button {
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       padding: 15px 25px;
       font-size: 18px;
       cursor: pointer;
+      touch-action: manipulation;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
     }
 
     #yes {
@@ -45,6 +51,8 @@
       color: white;
       font-size: 22px;
       transition: transform 0.2s;
+      position: relative;
+      z-index: 2;
     }
 
     #no {
@@ -52,58 +60,162 @@
       color: white;
       position: absolute;
       right: 20px;
-      top: 100px;
+      top: 120px;
+      z-index: 1;
     }
 
-    .hidden {
-      display: none;
+    .hidden { display: none; }
+
+    /* FULLSCREEN YES po 10 klikach */
+    #yes.fullscreen {
+      position: fixed;
+      inset: 0;
+      width: 100vw;
+      height: 100vh;
+      border-radius: 0;
+      font-size: 64px;
+      font-weight: 800;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transform: none !important;
+      z-index: 9999;
+    }
+
+    /* Lecące serduszka */
+    .heart {
+      position: fixed;
+      left: 50%;
+      bottom: -10vh;
+      font-size: 24px;
+      pointer-events: none;
+      animation: floatUp 2.4s linear forwards;
+      z-index: 99999;
+      filter: drop-shadow(0 6px 8px rgba(0,0,0,0.15));
+    }
+
+    @keyframes floatUp {
+      0%   { transform: translateX(0) translateY(0) scale(0.9); opacity: 0; }
+      10%  { opacity: 1; }
+      100% { transform: translateX(var(--dx)) translateY(-120vh) scale(1.6); opacity: 0; }
     }
   </style>
 </head>
+
 <body>
+  <div class="container" id="page1">
+    <h1>Czy zostaniesz moją walentynką? 💘</h1>
 
-<div class="container" id="page1">
-  <h1>Czy zostaniesz moją walentynką? 💘</h1>
-
-  <div class="buttons">
-    <button id="yes" onclick="yesClick()">TAK</button>
-    <button id="no" onclick="noClick()">NIE</button>
+    <div class="buttons">
+      <button id="yes" onclick="yesClick()">TAK</button>
+      <button id="no" onclick="noClick()">NIE</button>
+    </div>
   </div>
-</div>
 
-<div class="container hidden" id="page2">
-  <h1>WOOOO!! Kocham Cię 🥰❤️</h1>
-  <p>Najlepsza decyzja ever 😘</p>
-</div>
+  <div class="container hidden" id="page2">
+    <h1>WOOOO!! Kocham Cię 🥰❤️</h1>
+    <p>Najlepsza decyzja ever 😘</p>
+  </div>
 
 <script>
   let scale = 1;
+  let noIndex = 0;
+
   const noTexts = [
     "Na pewno?",
     "Ej no 😢",
-    "Proszęeee",
-    "Nie rób mi tego",
-    "Ostatnia szansa 😭"
+    "Proszęęę 🥺",
+    "No weź 😭",
+    "Serio mówisz „nie”?",
+    "Daj mi szansę 💘",
+    "Kliknij TAK, proszę 🙏",
+    "Będę grzeczny 😇",
+    "Nie łam mi serca 💔",
+    "Jeszcze raz pomyśl 🤔",
+    "Uśmiechnij się i kliknij TAK 😊",
+    "To tylko jeden klik 😏",
+    "Obiecuję, że warto 💖",
+    "Chociaż malutkie TAK? 🥹",
+    "Nie bądź taka/taki twarda/y 😅",
+    "Zrób to dla mnie 😘",
+    "Dobra, to może TAK? 😄",
+    "A może jednak…? 🙃",
+    "Nie uciekaj mi 😭",
+    "Kliknij zielone, proszę 💚"
   ];
-  let noIndex = 0;
 
   function noClick() {
-    scale += 0.25;
-    document.getElementById("yes").style.transform = `scale(${scale})`;
-
-    const noBtn = document.getElementById("no");
-    noBtn.textContent = noTexts[noIndex % noTexts.length];
     noIndex++;
 
-    noBtn.style.top = Math.random() * 140 + "px";
-    noBtn.style.left = Math.random() * 140 + "px";
+    const yesBtn = document.getElementById("yes");
+    const noBtn  = document.getElementById("no");
+
+    // 1–9: rośnie TAK + ucieka NIE
+    if (noIndex < 10) {
+      scale += 0.25;
+      yesBtn.style.transform = `scale(${scale})`;
+
+      noBtn.textContent = noTexts[noIndex % noTexts.length];
+
+      // losowe miejsce (żeby nie uciekło poza kontener za mocno)
+      const maxX = 240;
+      const maxY = 160;
+      noBtn.style.left = Math.random() * maxX + "px";
+      noBtn.style.top  = Math.random() * maxY + "px";
+    }
+    // 10: NIE znika, TAK fullscreen
+    else {
+      noBtn.style.display = "none";
+      yesBtn.classList.add("fullscreen");
+
+      // małe wibracje już przy przejęciu ekranu (opcjonalnie)
+      vibrate([40, 40, 40]);
+    }
   }
 
   function yesClick() {
-    document.getElementById("page1").classList.add("hidden");
-    document.getElementById("page2").classList.remove("hidden");
+    // wibracja po kliknięciu TAK
+    vibrate([120, 60, 120, 60, 180]);
+
+    // serduszka
+    burstHearts(40);
+
+    // przejście na stronę końcową po chwili
+    setTimeout(() => {
+      document.getElementById("page1").classList.add("hidden");
+      document.getElementById("page2").classList.remove("hidden");
+    }, 450);
+  }
+
+  function vibrate(pattern) {
+    try {
+      if ("vibrate" in navigator) navigator.vibrate(pattern);
+    } catch (e) {}
+  }
+
+  function burstHearts(count = 30) {
+    const hearts = ["💖","💘","💗","💓","💕","❤️","😍"];
+    for (let i = 0; i < count; i++) {
+      const el = document.createElement("div");
+      el.className = "heart";
+      el.textContent = hearts[Math.floor(Math.random() * hearts.length)];
+
+      // start x (losowo po szerokości)
+      const x = Math.random() * 100; // vw
+      el.style.left = x + "vw";
+
+      // losowy dryf w bok
+      const dx = (Math.random() * 60 - 30) + "vw";
+      el.style.setProperty("--dx", dx);
+
+      // losowa wielkość i czas
+      el.style.fontSize = (16 + Math.random() * 28) + "px";
+      el.style.animationDuration = (1.8 + Math.random() * 1.6) + "s";
+
+      document.body.appendChild(el);
+      el.addEventListener("animationend", () => el.remove());
+    }
   }
 </script>
-
 </body>
 </html>
