--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h1>WOOOO!! Kocham Cię 🥰❤️</h1>
 
     <!-- GIF: wrzuć plik masło.gif do repo obok index.html -->
-    <img class="final-gif" src="masło.gif" alt="masło gif" />
+    <img class="final-gif" src="IMG_2072.gif" alt="masło gif" />
 
     <p>Najlepsza decyzja ever 😘</p>
   </div>
