--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Walentyki 💖</title>
+  <title>Walentynki 💖</title>
 
   <style>
     body {
@@ -37,8 +37,8 @@
 
     button {
       border: none;
-      border-radius: 10px;
-      padding: 15px 25px;
+      border-radius: 14px;
+      padding: 16px 28px;
       font-size: 18px;
       cursor: pointer;
       touch-action: manipulation;
@@ -50,12 +50,12 @@
       background: #2ecc71;
       color: white;
       font-size: 22px;
-      transition: transform 0.2s;
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%) scale(1);
       transform-origin: center center;
+      transition: transform 0.2s;
       z-index: 1;
     }
 
@@ -64,7 +64,7 @@
       color: white;
       position: absolute;
       left: 220px;
-      top: 200px;
+      top: 260px;
       z-index: 3;
       white-space: nowrap;
     }
@@ -82,25 +82,34 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      transform: none !important;
       z-index: 9999;
+      animation: enterFullscreen 420ms cubic-bezier(.2,.9,.2,1) forwards;
+    }
+
+    @keyframes enterFullscreen {
+      from {
+        transform: translate(-50%, -50%) scale(var(--s, 1));
+        opacity: 0.95;
+      }
+      to {
+        transform: translate(0, 0) scale(1);
+        opacity: 1;
+      }
     }
 
     .heart {
       position: fixed;
       bottom: -10vh;
-      font-size: 24px;
       pointer-events: none;
       animation: floatUp 2.4s linear forwards;
       z-index: 99999;
-      filter: drop-shadow(0 6px 8px rgba(0,0,0,0.15));
       opacity: 0;
     }
 
     @keyframes floatUp {
-      0%   { transform: translateX(0) translateY(0) scale(0.9); opacity: 0; }
+      0%   { transform: translateY(0) scale(0.9); opacity: 0; }
       10%  { opacity: 1; }
-      100% { transform: translateX(var(--dx)) translateY(-120vh) scale(1.6); opacity: 0; }
+      100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
     }
 
     .final-gif {
@@ -114,6 +123,7 @@
 </head>
 
 <body>
+
   <div class="container" id="page1">
     <h1>Czy zostaniesz moją walentynką? 💘</h1>
 
@@ -124,12 +134,9 @@
   </div>
 
   <div class="container hidden" id="page2">
-    
-    <img class="final-gif" src="IMG_2072.gif" alt="masło gif" />
-    
     <h1>WOOOO!! Kocham Cię 🥰❤️</h1>
-
-    <p>Najlepsza decyzja ever 😘</p>
+    <img class="final-gif" src="IMG_2072.gif" alt="">
+    <p>Najlepsza decyzja ever 🥰</p>
   </div>
 
 <script>
@@ -137,100 +144,67 @@
   let noIndex = 0;
 
   const noTexts = [
-    "Na pewno?",
+    "Na pewno? 🤨",
     "Ej no",
     "Proszęęę",
     "No weź",
-    "Serio mówisz „nie”?",
+    "Serio?",
     "Daj mi szansę",
-    "Kliknij TAK, proszę 🙏",
+    "Kliknij TAK",
     "Będę grzeczny",
-    "Nie łam mi serca",
-    "Jeszcze raz pomyśl 🤔",
-    "Uśmiechnij się i kliknij TAK",
-    "To tylko jeden klik",
-    "Obiecuję, że warto ❤️",
-    "Chociaż malutkie TAK?",
-    "Nie bądź taka twarda",
-    "Zrób to dla mnie",
-    "Dobra, to może TAK?",
-    "A może jednak…? 🙃",
-    "Nie uciekaj mi",
-    "Kliknij zielone, proszę"
+    "Nie łam serca",
+    "Jeszcze raz"
   ];
 
-  function clamp(n, min, max) {
-    return Math.max(min, Math.min(max, n));
-  }
-
   function noClick() {
-    noIndex++;
-
     const yesBtn = document.getElementById("yes");
     const noBtn  = document.getElementById("no");
     const box    = document.querySelector(".buttons");
 
+    noIndex++;
+
     if (noIndex < 10) {
       scale += 0.25;
       yesBtn.style.transform = `translate(-50%, -50%) scale(${scale})`;
-
       noBtn.textContent = noTexts[noIndex % noTexts.length];
 
       const rect = box.getBoundingClientRect();
-      const noRect = noBtn.getBoundingClientRect();
+      const x = Math.random() * (rect.width - noBtn.offsetWidth);
+      const y = Math.random() * (rect.height - noBtn.offsetHeight);
 
-      const maxX = rect.width  - noRect.width  - 10;
-      const maxY = rect.height - noRect.height - 10;
-
-      const x = Math.random() * maxX;
-      const y = Math.random() * maxY;
-
-      noBtn.style.left = clamp(x, 10, maxX) + "px";
-      noBtn.style.top  = clamp(y, 10, maxY) + "px";
-    }
-    else {
+      noBtn.style.left = x + "px";
+      noBtn.style.top  = y + "px";
+    } else {
       noBtn.style.display = "none";
+      yesBtn.style.setProperty("--s", scale);
       yesBtn.classList.add("fullscreen");
-      vibrate([40, 40, 40]);
+      if ("vibrate" in navigator) navigator.vibrate([40,40,40]);
     }
   }
 
   function yesClick() {
-    vibrate([120, 60, 120, 60, 180]);
-
-    burstHearts(45);
-
+    if ("vibrate" in navigator) navigator.vibrate([120,60,120,60,180]);
+    burstHearts(40);
     setTimeout(() => {
       document.getElementById("page1").classList.add("hidden");
       document.getElementById("page2").classList.remove("hidden");
     }, 450);
   }
 
-  function vibrate(pattern) {
-    try {
-      if ("vibrate" in navigator) navigator.vibrate(pattern);
-    } catch (e) {}
-  }
-
-  function burstHearts(count = 50) {
-    const hearts = ["💖","💘","💗","💓","💕","❤️","😍"];
+  function burstHearts(count) {
+    const hearts = ["💖","💘","💗","💓","💕","❤️"];
     for (let i = 0; i < count; i++) {
       const el = document.createElement("div");
       el.className = "heart";
       el.textContent = hearts[Math.floor(Math.random() * hearts.length)];
-
-      el.style.left = (Math.random() * 100) + "vw";
-
-      const dx = (Math.random() * 60 - 30) + "vw";
-      el.style.setProperty("--dx", dx);
-
-      el.style.fontSize = (16 + Math.random() * 28) + "px";
-      el.style.animationDuration = (1.8 + Math.random() * 1.6) + "s";
-
+      el.style.left = Math.random() * 100 + "vw";
+      el.style.fontSize = 16 + Math.random() * 28 + "px";
+      el.style.animationDuration = 1.8 + Math.random() * 1.6 + "s";
       document.body.appendChild(el);
       el.addEventListener("animationend", () => el.remove());
     }
   }
 </script>
+
 </body>
 </html>
