--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
   </div>
 
   <div class="container hidden" id="page2">
-    <h1>WOOOO!! Kocham Cię 🥰❤️</h1>
+    <h1>Szczerze nie było innej opcji 😁</h1>
     <img class="final-gif" src="IMG_2072.gif" alt="">
-    <p>Najlepsza decyzja ever 🥰</p>
+    <p>Najlepsza decyzja ever 🥰 Kocham cię! ❤️</p>
   </div>
 
 <script>
@@ -148,11 +148,11 @@
     "Ej no",
     "Proszęęę",
     "No weź",
-    "Serio?",
+    "Serio? 🧐",
     "Daj mi szansę",
     "Kliknij TAK",
-    "Będę grzeczny",
-    "Nie łam serca",
+    "Aha? 😐",
+    "Nie łam mi serca",
     "Jeszcze raz"
   ];
 
