--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Walentynki 💖</title>
 
+  <meta property="og:title" content="Mam do Ciebie jedno bardzo ważne pytanie…">
+  <meta property="og:description" content="Obiecuję, że to nie scam">
+  <meta property="og:url" content="https://ku-u-be.github.io/Tego/">
+  <meta property="og:type" content="website">
+
   <style>
     body {
       margin: 0;
