--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="container hidden" id="page2">
     <h1>Szczerze nie było innej opcji 😁</h1>
     <img class="final-gif" src="IMG_2072.gif" alt="">
-    <p>Najlepsza decyzja ever 🥰 Kocham cię! ❤️</p>
+    <p>Najlepsza decyzja 🥰 Kocham cię! ❤️</p>
   </div>
 
 <script>
