--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
   </div>
 
   <div class="container hidden" id="page2">
-    <p>Najlepsza decyzja 🥰 Kocham cię! ❤️</p>
+    <h1>Najlepsza decyzja 🥰 Kocham cię! ❤️</h1>
     <img class="final-gif" src="IMG_2072.gif" alt="">
-    <h1>Szczerze nie było innej opcji 😁</h1>
+    <p1>Szczerze nie było innej opcji 😁</p1>
   </div>
 
 <script>
